[FIX] sửa overflow ở footer

--- a/src/assets/css/home-style-share.css
+++ b/src/assets/css/home-style-share.css
@@ -105,10 +105,6 @@ footer.footer .footer_wrapper .footer_box {
     line-height: 1.4rem;
 }
 
-.footer_box.box3 {
-    width: max-content;
-}
-
 #popup-wrapper {
     height: 100%;
     width: 100%;
